# DL-CV

./: .gitignore  000000.txt  Exercise_3.ipynb  Project_1_1.ipynb  README.md  baseline.py  dataLoader.py  directions.py  exercise_3.py  get_latents_batch.py  interpolatation_all.py  interpolation.py  latent_vector.py  loss.py  metrics.py  nms_test.py  project1_1.py  projector.py  pyproject.toml  rename.py  test.py  test_debug.py  train.py  train2.py  train_cam.py  train_weak_labels.py  utils.py
1_1_Project/: VGG19.py  baseline.py  inception_v3.py
1_1_Project/config/: baseline.yaml
1_1_Project/wandb/: latest-run
1_2_Project/: IoU.py  NMS.py  Project_1_2.py  mAP.py  proposal_set.py  test.py  utils.py
1_2_Project/config/: config.yaml  project_1_2.yaml
1_2_Project/proposal_annotations/: 000000.txt  000001.txt  000004.txt  000006.txt  000007.txt  000008.txt  000010.txt  000011.txt  000013.txt  000015.txt  000017.txt  000019.txt  000020.txt  000021.txt  000024.txt  000028.txt  000029.txt  000030.txt  (+106 more)
Project_1_1/: dataLoader.py  inference.py  train.py  utils.py
Project_1_2/: dataLoader.py  project_2_RP.py  project_2_train.py  sampler.py  taco_dataloader.py  test.py  todo.md  train.py  utils.py
Project_3/: dataLoader.py  loss.py  metrics.py  train.py  utils.py
architectures/: NestedUNet.py  UNet.py  grad_cam.py  grand_cam_segmentation.py  resnet101.py
clip_env/: pyvenv.cfg
config/: config.yaml  hp_config.yaml  project1.yaml  sweep.yaml
models/: baseline.py
targets/: w_beard.npy  w_beard.npz  w_beard_test.npz  w_beard_test.npz.npy
tests/: test_dl_cv.py
(+1526 files in other folders)
