[tool.poetry]
name = "DL-CV"
version = "0.1.0"
description = ""
authors = ["Karol <krzakkaraol1156@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
